--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "board",
+  "name": "better.co.at",
   "version": "1.0.0",
   "description": "Nuxt.js project",
   "author": "Christoph Hochstrasser <christoph@hochstrasser.io>",
@@ -13,21 +13,28 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^4.0.1",
+    "@nuxtjs/axios": "^4.4.0",
+    "excerpt-html": "^1.2.0",
+    "fs-extra": "^4.0.2",
+    "jsonp": "^0.2.1",
+    "localforage": "^1.5.0",
+    "moment": "^2.18.1",
     "node-sass": "^4.5.3",
+    "normalize.css": "^7.0.0",
     "nuxt": "^1.0.0-rc3",
-    "nuxtent": "^0.2.78",
-    "sass-loader": "^6.0.6",
-    "normalize.css": "^7.0.0"
+    "nuxtent": "^1.0.2",
+    "qs": "^6.5.1",
+    "rss": "^1.2.2",
+    "sass-loader": "^6.0.6"
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.3",
-    "eslint": "^4.3.0",
+    "babel-eslint": "^8.0.1",
+    "eslint": "^4.8.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-loader": "^1.9.0",
-    "eslint-plugin-html": "^3.1.1",
+    "eslint-plugin-html": "^3.2.2",
     "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-node": "^5.2.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1"
   }
