--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,4 +12,4 @@ phases:
       - yarn run generate
   post_build:
     commands:
-      - aws s3 sync dist s3://better.co.at --acl public-read --delete
+      - aws s3 sync dist s3://$DEPLOY_S3_BUCKET --acl public-read --delete
