--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,3 +13,4 @@ phases:
   post_build:
     commands:
       - aws s3 sync dist s3://$DEPLOY_S3_BUCKET --acl public-read --delete
+      - aws s3 sync dist/_nuxt s3://$DEPLOY_S3_BUCKET/_nuxt --acl public-read --delete --cache-control 'public, max-age=2678400'
