--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^4.4.0",
+    "@nuxtjs/dotenv": "^1.0.0",
+    "algoliasearch": "^3.24.5",
     "excerpt-html": "^1.2.0",
     "jsonp": "^0.2.1",
     "localforage": "^1.5.1",
@@ -22,7 +24,8 @@
     "normalize.css": "^7.0.0",
     "nuxt": "^1.0.0-rc3",
     "nuxtent": "^1.0.2",
-    "qs": "^6.5.1"
+    "qs": "^6.5.1",
+    "vue-instantsearch": "^1.0.1"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.1",
