--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
       - npm install -g yarn
   pre_build:
     commands:
-      - yarn
+      - yarn install
   build:
     commands:
       - echo '' > .env
