--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^4.4.0",
     "@nuxtjs/dotenv": "^1.0.0",
+    "@nuxtjs/google-analytics": "^1.0.0",
     "algoliasearch": "^3.24.5",
     "excerpt-html": "^1.2.0",
     "jsonp": "^0.2.1",
