--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "excerpt-html": "^1.2.0",
     "jsonp": "^0.2.1",
     "localforage": "^1.5.1",
+    "markdown-it-footnote": "^3.0.1",
     "moment": "^2.18.1",
     "normalize.css": "^7.0.0",
     "nuxt": "^1.0.0-rc3",
