--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   "dependencies": {
     "@nuxtjs/axios": "^4.4.0",
     "@nuxtjs/dotenv": "^1.0.0",
-    "@nuxtjs/google-analytics": "^1.0.0",
+    "@nuxtjs/google-analytics": "^2.0.1",
     "@nuxtjs/pwa": "^1.0.2",
+    "@nuxtjs/sitemap": "^0.0.3",
     "algoliasearch": "^3.24.5",
     "excerpt-html": "^1.2.0",
     "jsonp": "^0.2.1",
