--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
-    "now-build": "echo '' > .env && nuxt build",
+    "now-build": "echo '' > .env && nuxt build --universal",
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
@@ -15,36 +15,36 @@
     "wikiwords": "node ./scripts/wikiwords.js"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^4.4.0",
+    "@nuxtjs/axios": "^4.5.0",
     "@nuxtjs/dotenv": "^1.0.0",
     "@nuxtjs/google-analytics": "^2.0.1",
-    "@nuxtjs/pwa": "^1.0.2",
+    "@nuxtjs/pwa": "^2.0.2",
     "@nuxtjs/sitemap": "^0.0.3",
-    "algoliasearch": "^3.24.5",
+    "algoliasearch": "^3.24.6",
     "excerpt-html": "^1.2.0",
     "jsonp": "^0.2.1",
     "localforage": "^1.5.1",
     "markdown-it-footnote": "^3.0.1",
-    "moment": "^2.18.1",
+    "moment": "^2.19.2",
     "normalize.css": "^7.0.0",
-    "nuxt": "^1.0.0-rc3",
+    "nuxt": "^1.0.0-rc11",
     "nuxtent": "^1.0.2",
     "qs": "^6.5.1",
-    "vue-instantsearch": "^1.0.1"
+    "vue-instantsearch": "^1.3.2"
   },
   "devDependencies": {
-    "babel-eslint": "^8.0.1",
-    "eslint": "^4.8.0",
+    "babel-eslint": "^8.0.2",
+    "eslint": "^4.11.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-loader": "^1.9.0",
-    "eslint-plugin-html": "^3.2.2",
+    "eslint-plugin-html": "^4.0.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.2.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
-    "front-matter": "^2.2.0",
+    "front-matter": "^2.3.0",
     "fs-extra": "^4.0.2",
-    "node-sass": "^4.5.3",
+    "node-sass": "^4.7.2",
     "rss": "^1.2.2",
     "sass-loader": "^6.0.6"
   }
